Updated with LA & TX Accreditation + resized header photo

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="styles/testimonials.css"></link>
   <link rel="stylesheet" href="styles/aboutandroofing.css"></link>
   <link rel="stylesheet" href="styles/contact.css"></link>
-  <link rel="stylesheet" href="styles/roofing.css"></link>
-  <link rel="stylesheet" href="styles/styles.css"></link> -->
-  <link rel="stylesheet" href="styles/styles-minified.css"></link>
+  <link rel="stylesheet" href="styles/roofing.css"></link>-->
+  <link rel="stylesheet" href="styles/styles.css"></link> 
+  <!-- <link rel="stylesheet" href="styles/styles-minified.css"></link> -->
 
   <link rel="icon" type="image/png" href="photos/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -48,8 +48,9 @@
 
   <div class="photo-headliner" data-aos="fade" data-aos-duration="2000">
     <div class="inner-text">
-      <h1 style="font-size: 50px;">Superb Roofing </h1>
-      <h2 style="font-size: 25px;"><i class="slogan"><strong>For your family and ours!</strong></i></h2>
+      <h1 >Superb Roofing </h1>
+      <h2><i class="slogan"><strong>For your family and ours</strong></i></h2>
+      <h2><i class="slogan"><strong>Accredited in LA and TX!</strong></i></h2>
       <h3 style="font-size: 25px;">Give us a call! <br>(210)441-6377</h3>
     </div>
   </div>
