Options for Josh and Bri on innerText of header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
   <div class="logo-container">
     <div class="logo">
-      <img src="photos/logo.png" class="logo">
+      <img src="photos/logo.png">
     </div>
     <div class="logo-contact">        
       <div class="josh">
@@ -47,11 +47,18 @@
   </div>
 
   <div class="photo-headliner" data-aos="fade" data-aos-duration="2000">
-    <div class="inner-text">
-      <h1 >Superb Roofing </h1>
-      <h2><i class="slogan"><strong>For your family and ours</strong></i></h2>
-      <h2><i class="slogan"><strong>Accredited in LA and TX!</strong></i></h2>
-      <h3 style="font-size: 25px;">Give us a call! <br>(210)441-6377</h3>
+    <!-- OPTION1:
+    <div class="inner-text"> -->
+      <!-- <h1 >Superb Roofing </h1> -->
+      <!-- <h1><i class="slogan"><strong>For your family and ours</strong></i></h1>
+      <h2>Give us a call! <br>(210)441-6377</h2>
+      <h3><i class="slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">Accreditation Number: 562414</span></strong></i></h3>
+    </div> -->
+
+    <div class="inner-text"> 
+      <h1><i class="slogan"><strong>For your family and ours<br>(210)441-6377</strong></i></h1>
+      <!-- <h2>Give us a call! <br>(210)441-6377</h2> -->
+      <span><i class="inner-slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">Accreditation Number: 562414</span></strong></i></span>
     </div>
   </div>
 
