Roofing pics and photo headliner match @media queries

--- a/index.html
+++ b/index.html
@@ -47,19 +47,18 @@
   </div>
 
   <div class="photo-headliner" data-aos="fade" data-aos-duration="2000">
-    <!-- OPTION1:
-    <div class="inner-text"> -->
-      <!-- <h1 >Superb Roofing </h1> -->
-      <!-- <h1><i class="slogan"><strong>For your family and ours</strong></i></h1>
+    <!-- OPTION1: -->
+    <div class="inner-text">
+      <h1><i class="slogan"><strong>For your family and ours</strong></i></h1>
       <h2>Give us a call! <br>(210)441-6377</h2>
-      <h3><i class="slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">Accreditation Number: 562414</span></strong></i></h3>
-    </div> -->
+      <h3><i class="slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">LA License # 562414</span></strong></i></h3>
+    </div> 
 
-    <div class="inner-text"> 
+    <!-- <div class="inner-text"> 
       <h1><i class="slogan"><strong>For your family and ours<br>(210)441-6377</strong></i></h1>
       <!-- <h2>Give us a call! <br>(210)441-6377</h2> -->
-      <span><i class="inner-slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">Accreditation Number: 562414</span></strong></i></span>
-    </div>
+      <!-- <span><i class="inner-slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">Accreditation Number: 562414</span></strong></i></span> -->
+    <!-- </div> --> 
   </div>
 
   <div class="about">
