Google Site Verification

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
+  <meta name="google-site-verification" content="iZ2GEjZsnY2iEAZsA66m7E58iITVvSCgnovxeQRNOLo">
 
   <!-- <link rel="stylesheet" href="styles/header.css"></link>
   <link rel="stylesheet" href="styles/testimonials.css"></link>
