BBB logo, about us verbiage, responsive stylinga added with veteran-owned business image

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <header>
   <div class="logo-container">
     <div class="logo">
-      <img src="photos/logo.png">
+      <img src="photos/logo.png" alt="Superb Roofing Logo">
     </div>
     <div class="logo-contact">        
       <div class="josh">
-        <img src='photos/josh.jpeg'>
+        <img src='photos/josh.jpeg' alt="Photo of owner, Josh Janczewski">
       </div> 
       <br>
       <span><strong>Josh Janczewski</strong>, owner<br>
@@ -52,8 +52,11 @@
     <div class="inner-text">
       <h1><i class="slogan"><strong>For your family and ours</strong></i></h1>
       <h2>Give us a call! <br>(210) 441-6377</h2>
-      <h3><i class="slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">LA License # 562414</span></strong></i></h3>
+      <h3><i class="slogan"><strong>Accredited in <a href="PDFs/LA-Certificate.PDF" target="_blank" style="color:white;"><u>LA</u></a> & <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank' style="color:white;"><u>TX</u></a>!</span></strong></i></h3>
     </div> 
+    <div class="inner-veteran-image">
+      <img src="photos/veteran-owned-business.jpg">
+    </div>
 
     <!-- <div class="inner-text"> 
       <h1><i class="slogan"><strong>For your family and ours<br>(210)441-6377</strong></i></h1>
@@ -67,21 +70,21 @@
     <span class="slideshow-container">
       <!-- Slideshow Images -->
       <div class="mySlides fade">
-        <img src="photos/slideshow/abel.jpg" style="width:100%">
+        <img src="photos/slideshow/abel.jpg" style="width:100%" alt="Photo of Abel with a Superb Roofing hat on">
       </div>
   
       <div class="mySlides fade">
-        <img src="photos/slideshow/faith.jpg" style="width:100%">
+        <img src="photos/slideshow/faith.jpg" style="width:100%" alt="Photo of Faith walking down the road">
       </div>
 
       <div class="mySlides fade">
-        <img src="photos/slideshow/able-and-faith.jpg" style="width:100%">
+        <img src="photos/slideshow/able-and-faith.jpg" style="width:100%" alt="Photo of Able and Faith together in Dad's (Josh Janczewski) lap">
       </div>
     </span>
 
     <h1>About Us</h1>
     <p>
-      We are a family owned and operated roofing contractor serving south Texas. 
+      We are a <b>Christian family-owned</b> and <b>Veteran-operated</b> roofing contractor serving south Texas. 
       Our father started this business in 1989 with big dreams of growing it into a prosperous career. 
       We have worked hard and diligently to carry out that dream and have carried it down 3 generations! 
       <br><br>We provide our customers with top quality workmanship, materials, and overall service. 
@@ -122,31 +125,31 @@
       We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!
     </p>
     <div class="roof-service" data-aos="zoom-in-right">
-      <a href="http://www.condopedia.com/wiki/Tar_and_Gravel" target="_blank"> <img src="photos/services/gravel.jpeg"></a>
+      <a href="http://www.condopedia.com/wiki/Tar_and_Gravel" target="_blank"> <img src="photos/services/gravel.jpeg" alt="Tar and Gravel roof example"></a>
       <p>Tar and Gravel Roof</p>      
     </div>
     <div class="roof-service" data-aos="zoom-in-right">
-      <a href="https://en.wikipedia.org/wiki/Wood_shingle" target="_blank"><img src="photos/services/wooden-shake.jpg"></a>
+      <a href="https://en.wikipedia.org/wiki/Wood_shingle" target="_blank"><img src="photos/services/wooden-shake.jpg" alt="Wooden Shake roof example"></a>
       <p>Wooden Shake Roof</p>
     </div>
     <div class="roof-service" data-aos="zoom-in-right">
-      <a href="https://en.wikipedia.org/wiki/Roof_shingle" target="_blank"><img src="photos/services/tar.jpeg"></a>
+      <a href="https://en.wikipedia.org/wiki/Roof_shingle" target="_blank"><img src="photos/services/tar.jpeg" alt="Shingle roof example"></a>
       <p>Shingle Roof</p>
     </div>
     <div class="roof-service-mid" data-aos="zoom-in-left">
-      <a href="https://www.designingbuildings.co.uk/wiki/Roof_slates" target="_blank"><img src="photos/services/slate.jpeg"></a>
+      <a href="https://www.designingbuildings.co.uk/wiki/Roof_slates" target="_blank"><img src="photos/services/slate.jpeg" alt="Slate roof example"></a>
       <p>Slate Roof</p>
     </div>
     <div class="roof-service-mid" data-aos="zoom-in-left">
-      <a href="https://en.wikipedia.org/wiki/Roof_tiles" target="_blank"><img src="photos/services/tile.jpeg"></a>
+      <a href="https://en.wikipedia.org/wiki/Roof_tiles" target="_blank"><img src="photos/services/tile.jpeg" alt="Clay Tile roof example"></a>
       <p>Clay Tile Roof</p>
     </div>
     <div class="roof-service-mid" data-aos="zoom-in-up">
-      <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg"></a>
+      <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg" alt="Metal roof example"></a>
       <p>Metal Roof</p>
     </div>
     <div class="roof-service-mid" data-aos="zoom-in-up">
-      <a href="https://www.homeadvisor.com/r/rubber-roofing/#:~:text=Single%2Dply%20synthetic%20membrane%20rubber,shingles%20don't%20perform%20well." target="_blank"><img src="photos/services/rubber.jpeg"></a>
+      <a href="https://www.homeadvisor.com/r/rubber-roofing/#:~:text=Single%2Dply%20synthetic%20membrane%20rubber,shingles%20don't%20perform%20well." target="_blank"><img src="photos/services/rubber.jpeg" alt="Rubber roof example"></a>
       <p>Rubber Roof</p>
     </div>
   </div>
@@ -156,7 +159,7 @@
     <h1>Contact Us</h1>
     
     <div class="news">
-      <iframe src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+      <iframe src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" alt="Video of Superb Roofing on KENS5 News Channel"></iframe>
       <h3>We're on the news! Check us out!</h3>
     </div>
 
@@ -172,10 +175,10 @@
       <span><strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</strong></a></span>
       <br><br>
       <div class="contact-icon-container">
-        <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png" class="social-icons"></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb.jpeg" class="social-icons"></a>
+        <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png" class="social-icons" alt="Facebook Logo"></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg" class="social-icons" alt="Instagram Logo"></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png" class="social-icons" alt="Thumbtack Logo"></a>&nbsp;&nbsp;&nbsp;
+        <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb.png" class="social-icons" style="max-width: 50px;height:auto;" alt="Better Business Bureau Logo"></a>
       </div>
     </div>
   </div>
