--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="inner-text">
       <h1><i class="slogan"><strong>For your family and ours</strong></i></h1>
       <h2>Give us a call! <br>(210) 441-6377</h2>
-      <h3><i class="slogan"><strong>Accredited in <a href="PDFs/LA-Certificate.PDF" target="_blank" style="color:white;"><u>LA</u></a> & <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank' style="color:white;"><u>TX</u></a>!</span></strong></i></h3>
+      <h3><i class="slogan"><strong>Accredited in <a href="PDFs/LA-Certificate.PDF" target="_blank" style="color:white;"><u>LA</u></a> & <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" style="color:white;"><u>TX</u></a>!</span></strong></i></h3>
     </div> 
     <div class="inner-veteran-image">
       <img src="photos/veteran-owned-business.jpg">
