--- a/index.html
+++ b/index.html
@@ -20,182 +20,188 @@
 </head>
 <body>
   <div clas="container">
-  <header>
-  <div class="logo-container">
-    <div class="logo">
-      <img src="photos/logo.png" alt="Superb Roofing Logo">
+    <header>
+      <div class="logo-container">
+        <div class="logo">
+          <img src="photos/logo.png" alt="Superb Roofing Logo">
+        </div>
+        <div class="logo-contact">        
+          <div class="josh">
+            <img src='photos/josh.jpeg' alt="Photo of owner, Josh Janczewski">
+          </div> 
+          <br>
+          <span><strong>Josh Janczewski</strong>, owner<br>
+          <i>(210) 441-6377</i><br>
+          131 S Rueckle Rd<br>
+          New Braunfels, TX 78130
+          </span>
+        </div>
+      </div>
+    </header>
+
+    <div class="topnav">
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="#testimonials">TESTIMONIALS</a></li>
+        <li><a href="#roofing">SERVICES</a></li>
+      </ul>
     </div>
-    <div class="logo-contact">        
-      <div class="josh">
-        <img src='photos/josh.jpeg' alt="Photo of owner, Josh Janczewski">
+
+    <div class="photo-headliner" data-aos="fade" data-aos-duration="2000">
+      <!-- OPTION1: -->
+      <div class="inner-text">
+        <h1><i class="slogan"><strong>For your family and ours</strong></i></h1>
+        <h2>Give us a call! <br>(210) 441-6377</h2>
+        <h3><i class="slogan"><strong>Accredited in <a href="PDFs/LA-Certificate.PDF" target="_blank" style="color:white;"><u>LA</u></a> & <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" style="color:white;"><u>TX</u></a>!</span></strong></i></h3>
       </div> 
-      <br>
-      <span><strong>Josh Janczewski</strong>, owner<br>
-      <i>(210) 441-6377</i><br>
-      131 S Rueckle Rd<br>
-      New Braunfels, TX 78130
-      </span>
-    </div>
-  </div>
-  </header>
+      <!-- <div class="inner-veteran-image">
+        <img src="photos/veteran-owned-business.jpg">
+      </div> -->
 
-  <div class="topnav">
-    <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="#testimonials">TESTIMONIALS</a></li>
-      <li><a href="#roofing">SERVICES</a></li>
-    </ul>
-  </div>
-
-  <div class="photo-headliner" data-aos="fade" data-aos-duration="2000">
-    <!-- OPTION1: -->
-    <div class="inner-text">
-      <h1><i class="slogan"><strong>For your family and ours</strong></i></h1>
-      <h2>Give us a call! <br>(210) 441-6377</h2>
-      <h3><i class="slogan"><strong>Accredited in <a href="PDFs/LA-Certificate.PDF" target="_blank" style="color:white;"><u>LA</u></a> & <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" style="color:white;"><u>TX</u></a>!</span></strong></i></h3>
-    </div> 
-    <div class="inner-veteran-image">
-      <img src="photos/veteran-owned-business.jpg">
+      <!-- <div class="inner-text"> 
+        <h1><i class="slogan"><strong>For your family and ours<br>(210)441-6377</strong></i></h1>
+        <!-- <h2>Give us a call! <br>(210)441-6377</h2> -->
+        <!-- <span><i class="inner-slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">Accreditation Number: 562414</span></strong></i></span> -->
+      <!-- </div> --> 
     </div>
 
-    <!-- <div class="inner-text"> 
-      <h1><i class="slogan"><strong>For your family and ours<br>(210)441-6377</strong></i></h1>
-      <!-- <h2>Give us a call! <br>(210)441-6377</h2> -->
-      <!-- <span><i class="inner-slogan"><strong>Accredited in LA and TX!<br><span class="LA-credit">Accreditation Number: 562414</span></strong></i></span> -->
-    <!-- </div> --> 
-  </div>
-
-  <div class="about">
-  <!-- Slideshow container -->
-    <span class="slideshow-container">
-      <!-- Slideshow Images -->
-      <div class="mySlides fade">
-        <img src="photos/slideshow/abel.jpg" style="width:100%" alt="Photo of Abel with a Superb Roofing hat on">
-      </div>
-  
-      <div class="mySlides fade">
-        <img src="photos/slideshow/faith.jpg" style="width:100%" alt="Photo of Faith walking down the road">
-      </div>
-
-      <div class="mySlides fade">
-        <img src="photos/slideshow/able-and-faith.jpg" style="width:100%" alt="Photo of Able and Faith together in Dad's (Josh Janczewski) lap">
-      </div>
-    </span>
-
-    <h1>About Us</h1>
-    <p>
-      We are a <b>Christian family-owned</b> and <b>Veteran-operated</b> roofing contractor serving south Texas. 
-      Our father started this business in 1989 with big dreams of growing it into a prosperous career. 
-      We have worked hard and diligently to carry out that dream and have carried it down 3 generations! 
-      <br><br>We provide our customers with top quality workmanship, materials, and overall service. 
-      Our team is knowledgeable in all different roofing systems and what they require. 
-      We also provide storm restoration and work for insurance proceeds on all roofs that are qualified. 
-      We take care of the insurance process for you, offer free inspections and estimates, and ensure the upmost reliability of our company. 
-      <br><br>A roof is one of the most important features of a home or business. It provides shelter and protection. 
-      We promise to always be there to keep that roof over your head in the best shape possible. 
-      We take pride in our company, in our men, and in our work. 
-      <br><br>We work for your family and ours! That is the <strong>Superb</strong> way.
-    </p> 
-    <p id="colossians">
-      <i>"Whatever you do, work at it with all your heart, as working for the Lord, not for human masters..." - <strong>Colossians 3:23</strong></i> 
-    </p>
-  </div>
-
-  <div class="testimonials">
-    <a id="testimonials"></a>
-    <span>Testimonials</span>
-    <div class="before-and-after-1" data-aos="zoom-in-left" data-aos-delay="250" data-aos-offset="300">
-      <div class="roof-quote-1">"Best roofing experience. Josh really came through for all of our needs. He made the insurance process go from stressful to nothing to worry about and we received a new roof out of it, fully covered by our insurance! I wouldn't trust anyone else with my roof. Superb is our only roofer." - Alice
-      </div>
-    </div>
-    <div class="before-and-after-2" data-aos="zoom-in-up" data-aos-offset="300">
-      <div class="roof-quote-2">"Josh was very professional and honest. He took care of all the run around we got from our insurance company which not many roofing companies would want to deal with. He took extra time to explain each process every step of the way."- Sandra
-      </div>
-    </div>
-    <div class="before-and-after-3" data-aos="zoom-in-right" data-aos-delay="250" data-aos-offset="300">
-      <div class="roof-quote-3">"Superb roofing helped me every step of the way. They were patient, helpful, kind, and a wonderful family to work with. I highly recommend Superb Roofing."- David
-      </div>
-    </div>
-  </div>
-
-  <div class="roofing-services">
-    <a id="roofing"></a>
-    <h1>Roofing Services</h1>
-    <p>
-      We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!
-    </p>
-    <div class="roof-service" data-aos="zoom-in-right">
-      <a href="http://www.condopedia.com/wiki/Tar_and_Gravel" target="_blank"> <img src="photos/services/gravel.jpeg" alt="Tar and Gravel roof example"></a>
-      <p>Tar and Gravel Roof</p>      
-    </div>
-    <div class="roof-service" data-aos="zoom-in-right">
-      <a href="https://en.wikipedia.org/wiki/Wood_shingle" target="_blank"><img src="photos/services/wooden-shake.jpg" alt="Wooden Shake roof example"></a>
-      <p>Wooden Shake Roof</p>
-    </div>
-    <div class="roof-service" data-aos="zoom-in-right">
-      <a href="https://en.wikipedia.org/wiki/Roof_shingle" target="_blank"><img src="photos/services/tar.jpeg" alt="Shingle roof example"></a>
-      <p>Shingle Roof</p>
-    </div>
-    <div class="roof-service-mid" data-aos="zoom-in-left">
-      <a href="https://www.designingbuildings.co.uk/wiki/Roof_slates" target="_blank"><img src="photos/services/slate.jpeg" alt="Slate roof example"></a>
-      <p>Slate Roof</p>
-    </div>
-    <div class="roof-service-mid" data-aos="zoom-in-left">
-      <a href="https://en.wikipedia.org/wiki/Roof_tiles" target="_blank"><img src="photos/services/tile.jpeg" alt="Clay Tile roof example"></a>
-      <p>Clay Tile Roof</p>
-    </div>
-    <div class="roof-service-mid" data-aos="zoom-in-up">
-      <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg" alt="Metal roof example"></a>
-      <p>Metal Roof</p>
-    </div>
-    <div class="roof-service-mid" data-aos="zoom-in-up">
-      <a href="https://www.homeadvisor.com/r/rubber-roofing/#:~:text=Single%2Dply%20synthetic%20membrane%20rubber,shingles%20don't%20perform%20well." target="_blank"><img src="photos/services/rubber.jpeg" alt="Rubber roof example"></a>
-      <p>Rubber Roof</p>
-    </div>
-  </div>
-
-  <div class="contact">
-    <a id="contact"></a>
-    <h1>Contact Us</h1>
+    <div class="about">
+    <!-- Slideshow container -->
+      <span class="slideshow-container">
+        <!-- Slideshow Images -->
+        <div class="mySlides fade">
+          <img src="photos/slideshow/abel.jpg" style="width:100%" alt="Photo of Abel with a Superb Roofing hat on">
+        </div>
     
-    <div class="news">
-      <iframe src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" alt="Video of Superb Roofing on KENS5 News Channel"></iframe>
-      <h3>We're on the news! Check us out!</h3>
+        <div class="mySlides fade">
+          <img src="photos/slideshow/faith.jpg" style="width:100%" alt="Photo of Faith walking down the road">
+        </div>
+
+        <div class="mySlides fade">
+          <img src="photos/slideshow/able-and-faith.jpg" style="width:100%" alt="Photo of Able and Faith together in Dad's (Josh Janczewski) lap">
+        </div>
+      </span>
+
+      <h1>About Us</h1>
+      <p>
+        We are a <b>Christian family-owned</b> and <b>Veteran-operated</b> roofing contractor serving south Texas. 
+        Our father started this business in 1989 with big dreams of growing it into a prosperous career. 
+        We have worked hard and diligently to carry out that dream and have carried it down 3 generations! 
+        <br><br>We provide our customers with top quality workmanship, materials, and overall service. 
+        Our team is knowledgeable in all different roofing systems and what they require. 
+        We also provide storm restoration and work for insurance proceeds on all roofs that are qualified. 
+        We take care of the insurance process for you, offer free inspections and estimates, and ensure the upmost reliability of our company. 
+        <br><br>A roof is one of the most important features of a home or business. It provides shelter and protection. 
+        We promise to always be there to keep that roof over your head in the best shape possible. 
+        We take pride in our company, in our men, and in our work. 
+        <br><br>We work for your family and ours! That is the <strong>Superb</strong> way.
+      </p> 
+      <p id="colossians">
+        <i>"Whatever you do, work at it with all your heart, as working for the Lord, not for human masters..." - <strong>Colossians 3:23</strong></i> 
+      </p>
     </div>
 
-    <div class="contact-us">
-      <div class="josh-contact">
-        <img src='photos/josh-contact.jpeg'>
-      </div> 
-      <br>
-      <span><strong>131 S Rueckle Rd <br>New Braunfels, TX 78130</strong></span>
-      <br>
-      <span><strong><a href="tel:2104416377">(210) 441-6377</a></strong></span>
-      <br>
-      <span><strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</strong></a></span>
-      <br><br>
-      <div class="contact-icon-container">
-        <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png" class="social-icons" alt="Facebook Logo"></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg" class="social-icons" alt="Instagram Logo"></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png" class="social-icons" alt="Thumbtack Logo"></a>&nbsp;&nbsp;&nbsp;
-        <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb.png" class="social-icons" style="max-width: 50px;height:auto;" alt="Better Business Bureau Logo"></a>
+    <div class="testimonials">
+      <a id="testimonials"></a>
+      <span>Testimonials</span>
+      <div class="before-and-after-1" data-aos="zoom-in-left" data-aos-delay="250" data-aos-offset="300">
+        <div class="roof-quote-1">"Best roofing experience. Josh really came through for all of our needs. He made the insurance process go from stressful to nothing to worry about and we received a new roof out of it, fully covered by our insurance! I wouldn't trust anyone else with my roof. Superb is our only roofer." - Alice
+        </div>
+      </div>
+      <div class="before-and-after-2" data-aos="zoom-in-up" data-aos-offset="300">
+        <div class="roof-quote-2">"Josh was very professional and honest. He took care of all the run around we got from our insurance company which not many roofing companies would want to deal with. He took extra time to explain each process every step of the way."- Sandra
+        </div>
+      </div>
+      <div class="before-and-after-3" data-aos="zoom-in-right" data-aos-delay="250" data-aos-offset="300">
+        <div class="roof-quote-3">"Superb roofing helped me every step of the way. They were patient, helpful, kind, and a wonderful family to work with. I highly recommend Superb Roofing."- David
+        </div>
       </div>
     </div>
+
+    <div class="roofing-services">
+      <a id="roofing"></a>
+      <h1>Roofing Services</h1>
+      <p>
+        We have experience with All Roofing Systems from metal, slate, and even clay, tar, and gravel! Call us today to find out about all of your roofing options!
+      </p>
+      <div class="roof-service" data-aos="zoom-in-right">
+        <a href="http://www.condopedia.com/wiki/Tar_and_Gravel" target="_blank"> <img src="photos/services/gravel.jpeg" alt="Tar and Gravel roof example"></a>
+        <p>Tar and Gravel Roof</p>      
+      </div>
+      <div class="roof-service" data-aos="zoom-in-right">
+        <a href="https://en.wikipedia.org/wiki/Wood_shingle" target="_blank"><img src="photos/services/wooden-shake.jpg" alt="Wooden Shake roof example"></a>
+        <p>Wooden Shake Roof</p>
+      </div>
+      <div class="roof-service" data-aos="zoom-in-right">
+        <a href="https://en.wikipedia.org/wiki/Roof_shingle" target="_blank"><img src="photos/services/tar.jpeg" alt="Shingle roof example"></a>
+        <p>Shingle Roof</p>
+      </div>
+      <div class="roof-service-mid" data-aos="zoom-in-left">
+        <a href="https://www.designingbuildings.co.uk/wiki/Roof_slates" target="_blank"><img src="photos/services/slate.jpeg" alt="Slate roof example"></a>
+        <p>Slate Roof</p>
+      </div>
+      <div class="roof-service-mid" data-aos="zoom-in-left">
+        <a href="https://en.wikipedia.org/wiki/Roof_tiles" target="_blank"><img src="photos/services/tile.jpeg" alt="Clay Tile roof example"></a>
+        <p>Clay Tile Roof</p>
+      </div>
+      <div class="roof-service-mid" data-aos="zoom-in-up">
+        <a href="https://en.wikipedia.org/wiki/Metal_roof" target="_blank"><img src="photos/services/metal.jpeg" alt="Metal roof example"></a>
+        <p>Metal Roof</p>
+      </div>
+      <div class="roof-service-mid" data-aos="zoom-in-up">
+        <a href="https://www.homeadvisor.com/r/rubber-roofing/#:~:text=Single%2Dply%20synthetic%20membrane%20rubber,shingles%20don't%20perform%20well." target="_blank"><img src="photos/services/rubber.jpeg" alt="Rubber roof example"></a>
+        <p>Rubber Roof</p>
+      </div>
+    </div>
+
+    <div class="contact">
+      <a id="contact"></a>
+      <h1>Contact Us</h1>
+      
+      <div class="news">
+        <iframe src="https://kens5.com/embeds/video/273-2edd0769-0cd5-4de3-9433-687d1bbda1bd/iframe" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" alt="Video of Superb Roofing on KENS5 News Channel"></iframe>
+        <h3>We're on the news! Check us out!</h3>
+      </div>
+
+      <div class="contact-us">
+        <div class="josh-contact">
+          <img src='photos/josh-contact.jpeg'>
+        </div> 
+        <br>
+        <span><strong>131 S Rueckle Rd <br>New Braunfels, TX 78130</strong></span>
+        <br>
+        <span><strong><a href="tel:2104416377">(210) 441-6377</a></strong></span>
+        <br>
+        <span><strong><a href="mailto:superb.roofing20@gmail.com"> superb.roofing20@gmail.com</strong></a></span>
+        <br><br>
+        <div class="contact-icon-container">
+          <a href="https://www.facebook.com/SuperbRoofingLLC/" target="_blank"><img src="photos/social/facebook.png" class="social-icons" alt="Facebook Logo"></a>&nbsp;&nbsp;&nbsp;
+          <a href="https://www.instagram.com/superbroofingllc/" target="_blank"><img src="photos/social/instagram.jpeg" class="social-icons" alt="Instagram Logo"></a>&nbsp;&nbsp;&nbsp;
+          <a href="https://www.thumbtack.com/tx/new-braunfels/roofing/superb-roofing-llc/service/388975581369360387?service_pk=388975581369360387&category_pk=174454027063083482&project_pk=399688010078486532&lp_request_pk=399151118418264068&zip_code=78130&keyword_pk=102906936653982585&click_origin=pro%20list%2Fclick%20pro%20container&sourcePage=&sourceEvent=" target="_blank"><img src="photos/social/thumbtack.png" class="social-icons" alt="Thumbtack Logo"></a>&nbsp;&nbsp;&nbsp;
+          <a href="https://www.bbb.org/us/tx/new-braunfels/profile/roofing-contractors/superb-roofing-llc-0825-1000182595" target='_blank'><img src="photos/social/bbb.png" class="social-icons" style="max-width: 50px;height:auto;" alt="Better Business Bureau Logo"></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <p>&#169; Copyright 2020 - Do not copy. All Rights Reserved.</p>
+    </div>
   </div>
 
-  <div class="footer">
-    <p>&#169; Copyright 2020 - Do not copy. All Rights Reserved.</p>
+  <div class="appointment-fixed">
+    <div>
+      <a href="google-link">Book an appointment today!</a>
+    </div>
   </div>
-</div>
 
-<script src="js/slideshow.js"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-  AOS.init({
-    offset: 100,
-    duration: 1500,
-    once: true
-  });
-</script>
+  <script src="js/slideshow.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      offset: 100,
+      duration: 1500,
+      once: true
+    });
+  </script>
 </body>
 </html>
